--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "private": true,
   "scripts": {
     "deploy": "wrangler deploy",
-    "dev": "wrangler dev",
+    "dev": "CLOUDFLARE_API_TOKEN=CbdzHRb8c5ARihLuU-vQoP9XPMM3gw0kkjU-a7mR wrangler dev",
     "start": "wrangler dev",
     "cf-typegen": "wrangler types"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20240419.0",
-    "itty-router": "^3.0.12",
-    "typescript": "^5.0.4",
-    "wrangler": "^3.0.0"
+    "@cloudflare/workers-types": "^4.20240423.0",
+    "wrangler": "^3.52.0",
+    "typescript": "^5.0.4"
   }
 }
